fix: CORS 설정 개선
- AllowedOriginPatterns를 환경 변수로 설정
- Railway에서 ALLOWED_ORIGINS 환경 변수 지원
- ExposedHeaders 명시적 설정
- 기본값으로 localhost + Railway 도메인 허용

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>